syntax = "proto3";
import "ConfigSrvCommon.proto";

package io.panshi.config.srv;

option java_package = "io.panshi.config.srv";
option java_multiple_files = true;

message ConfigDto{
  string group = 1;
  string set = 2;
  string key = 3;
  string configValueType = 4;
  string content = 5;
  int64  version = 6;
}

message DescribeConfigListResponse {
  repeated ConfigDto configList = 1;
}

message DescribeConfigListRequest {
  string filterKeyword = 1;
}

message CreateConfigRequest {
  string key = 1;
  string group = 2;
  string set = 3;
  string content = 4;
  string contentType = 5;
};

message CreateConfigResponse {
  CommonResp cRsp = 1;
  string id = 2;
}